Updated logstash path

--- a/nsw_crimeset_logstash.conf
+++ b/nsw_crimeset_logstash.conf
@@ -4,7 +4,7 @@
 
 input {
   file {
-   path => "/Users/Nic/Desktop/NSW_Crime/nsw_offence.csv"
+   path => "/<path to this file>/nsw_offence.csv"
    start_position => ["beginning"]
    sincedb_path => "/dev/null"
    type => nsw_crime_docs
@@ -26,7 +26,7 @@ filter {
 output {
   elasticsearch {
     template_name => "nsw-crimeset"
-    template => "/Users/Nic/Desktop/NSW_Crime/nsw_crimeset_template.json"
+    template => "/<path to this template>/nsw_crimeset_template.json"
     hosts => ["localhost:9200"]
     index => "nsw-crimeset"
   }
